--- a/assets/mocktest_content/css/content.css
+++ b/assets/mocktest_content/css/content.css
@@ -64,7 +64,7 @@
     padding: 0px 15px;
     align-items: center;
     box-shadow: 0 1px 2px rgb(82 81 86);
-    margin-top: -55px;
+    margin-top: -51px;
     margin-bottom: 25px;
 }
 
@@ -110,9 +110,7 @@
     flex-direction: row-reverse;
     flex-wrap: wrap-reverse;
 }
-.nav-tabs .nav-link {
-    font-size: 14px;
-    }
+
 
 #Search-c {
     height: 45px;
@@ -134,30 +132,61 @@
 }
 @media screen and (max-width: 460px) {
  .nav-tabs .nav-link {
-    font-size: 12px;
+    font-size: 15px;
     }
     #Search-c {
-        height: 40px;
-        width: 310px;
+        height: 38px;
+        width: 140px;
+        margin-left: 200px;
        }
        #Search-c input{
-        height: 40px;
-        width: 310px;
+        height: 38px;
+        width: 140px;
+        
        }
+       #Search-c span i {
+        font-size: 18px;
+        margin-left: -40px;
 
+       }
 }
 
-@media screen and (max-width: 350px) {
+
+
+
+@media screen and (max-width: 375px) {
     .nav-tabs .nav-link {
-       font-size: 8px;
+       font-size: 12px;
        }
    
        #Search-c {
-        height: 32px;
-        width: 247px;
+        height: 33px;
+        margin-left:200px ;
        }
        #Search-c input{
-        height: 32px;
-        width: 247px;
+        height: 33px;
+        min-width: 165px;
+       }
+       #Search-c span i {
+        font-size: 16px;
+        margin-left: -29px;
+
+       }
+   }
+
+   @media screen and (max-width: 320px) {
+    .nav-tabs .nav-link {
+       font-size: 9px;
+       padding: 10px 17px;
+
+       }
+   
+       #Search-c {
+        height: 30px;
+        width: 120px;
+       }
+       #Search-c input{
+        height: 30px;
+        width: 120px;
        }
    }
